# invoice-processing

./: .gitignore  app.py  main.py  pyproject.toml  readme.md  requirements.txt
src/: models.py  utils.py
src/chains/: __init__.py  process_invoice_chain.py
src/ocr/: __init__.py  azure_doc_parser.py
src/parsers/: __init__.py  process_invoice_parser.py
src/prompts/: __init__.py  base_prompt.py  process_invoice_prompt.py
